--- a/cat.css
+++ b/cat.css
@@ -3,5 +3,5 @@ body {
 	}
 h1 {
 	color: black;
-	background-image:url(katheryl.github.io/cat/header.jpeg);
+	background-image:url(http://www.interestingfactss.com/wp-content/uploads/2014/10/flower-meadow-20392-20902-hd-wallpapers.jpg);
 }
