--- a/cat.css
+++ b/cat.css
@@ -2,7 +2,7 @@ body {
 	background-color:#F2E8D7;
 	}
 h1 {
-	background-image:url(http://www.interestingfactss.com/wp-content/uploads/2014/10/flower-meadow-20392-20902-hd-wallpapers.jpg);
+	background-image:url(header.jpeg);
 	font-family: mistral;
   color:white;
   font-size:60px;
