--- a/cat.css
+++ b/cat.css
@@ -2,7 +2,7 @@ body {
 	background-color:#F2E8D7;
 	}
 h1 {
-	font-family: mistral;
+font-family: Lucida Handwriting;
   color:white;
   font-size:60px;
   text-algin:right;
