--- a/cat.css
+++ b/cat.css
@@ -2,9 +2,10 @@ body {
 	background-color:#F2E8D7;
 	}
 h1 {
+	background-image: url(http://www.interestingfactss.com/wp-content/uploads/2014/10/flower-meadow-20392-20902-hd-wallpapers.jpg);
 font-family: Lucida Handwriting;
   color:white;
-  font-size:60px;
+  font-size:50px;
   text-algin:right;
   border:1px solid black;
   padding-left:10px;
