--- a/cat.css
+++ b/cat.css
@@ -2,8 +2,7 @@ body {
 	background-color:#F2E8D7;
 	}
 h1 {
-	background-image:
-	
+	image-size: 1500px;
 font-family: Lucida Handwriting;
   color:white;
   font-size:50px;
