--- a/cat.css
+++ b/cat.css
@@ -1,11 +1,9 @@
-body {
-	background-color:#F2E8D7;
-	}
-h1 {
 
-font-family: Lucida Handwriting;
+h1 {
+  background-image: url(http://www.interestingfactss.com/wp-content/uploads/2014/10/flower-meadow-20392-20902-hd-wallpapers.jpg);
+  font-family: Lucida Handwriting;
   color:white;
-  font-size:50px;
+  font-size:60px;
   text-algin:right;
   border:1px solid black;
   padding-left:10px;
@@ -13,4 +11,63 @@ font-family: Lucida Handwriting;
   width:1500px;
   height:200px;
 }
-
+h2 {
+  font-size:20px;
+  margin-left:350px;
+  font-family:Courier;
+}
+body {
+  background-color:#F2E8d7;
+}
+#container {
+  width:960px;
+  padding-left:100px;
+}
+#nav li {
+  display:inline;
+  background-color:#ff9a79;
+  width:150px;
+  margin-right:10px;
+  margin-left:-70px;
+  float:left;
+  padding-top:20px;
+  padding-bottom:20px;
+  padding-left:-10px;
+  font-size:15px;
+  font-family: helvetica;
+  }
+nav ul {
+  width:150px;
+  padding-left:0px;
+}
+a {
+  color:black;
+  text-decoration:none;
+  width:200px;
+  padding:20px;
+}
+footer {
+  clear:both;
+  float:left;
+	position: relative;
+  top:100px;
+}
+#content {
+  position:absolute;
+  width:960px;
+  padding:10px;
+  padding-right:100px;
+  padding-bottom:200px;
+  margin-left:150px;
+  border:5px solid black;
+}
+h3 {
+  font-family:Courier;
+  text-align:center;
+  padding-left:20px;
+}
+#content p {
+  font-family:Courier;
+  text-align:center;
+  padding-left:20px;
+}
