--- a/cat.css
+++ b/cat.css
@@ -30,11 +30,12 @@ body {
   margin-right:10px;
   margin-left:-70px;
   float:left;
-  padding-top:50px;
+  padding-top:10px;
   padding-bottom:20px;
   padding-left:-10px;
-  font-size:15px;
+  font-size:25px;
   font-family: helvetica;
+  text-align:center;
   }
 #nav ul {
   width:150px;
