--- a/cat.css
+++ b/cat.css
@@ -22,6 +22,7 @@ body {
 #container {
   width:960px;
   padding-left:100px;
+  padding-top:20px;
 }
 #nav li {
   display:inline;
@@ -35,7 +36,7 @@ body {
   padding-left:-10px;
   font-size:20px;
   font-family: helvetica;
-  text-align:center;
+  text-align:right;
   }
 #nav ul {
   width:150px;
@@ -47,11 +48,18 @@ a {
   width:200px;
   padding:20px;
 }
+a:hover {
+	color:#00ff7f;
+}
 footer {
   clear:both;
-  float:left;
 	position: relative;
-  top:100px;
+	float:left;
+  top:300px;
+  border:1px solid black;
+  width:300px;
+  text-align:center;
+  background-color:white;
 }
 #content {
   position:absolute;
@@ -60,15 +68,15 @@ footer {
   padding-right:100px;
   padding-bottom:200px;
   margin-left:150px;
-  border:5px solid black;
+  border:2px solid black;
 }
 h3 {
-  font-family:Courier;
+  font-family:helvetica;
   text-align:center;
   padding-left:20px;
 }
 #content p {
-  font-family:Courier;
+  font-family:helvetica;
   text-align:center;
   padding-left:20px;
 }
