--- a/cat.css
+++ b/cat.css
@@ -14,7 +14,7 @@ h1 {
 h2 {
   font-size:20px;
   margin-left:350px;
-  font-family:Courier;
+  font-family:helvetica;
 }
 body {
   background-color:#F2E8d7;
@@ -30,12 +30,13 @@ body {
   width:150px;
   margin-right:10px;
   margin-left:-70px;
+  margin-top:10px;
   float:left;
   padding-bottom:20px;
   padding-left:-10px;
   font-size:20px;
   font-family: helvetica;
-  text-align:right;
+  text-align:left;
   }
 #nav ul {
   width:150px;
