--- a/cat.css
+++ b/cat.css
@@ -30,10 +30,10 @@ body {
   width:150px;
   margin-right:10px;
   margin-left:-70px;
-  margin-top:10px;
   float:left;
   padding-bottom:20px;
   padding-left:-10px;
+  padding-top:-10px;
   font-size:20px;
   font-family: helvetica;
   text-align:left;
