--- a/cat.css
+++ b/cat.css
@@ -81,3 +81,7 @@ h3 {
   text-align:center;
   padding-left:20px;
 }
+header {
+	background-image: url(https://www.flickr.com/photos/124698714@N07/17294413242/);
+	font-family: Lucida Handwriting;
+}
