--- a/cat.css
+++ b/cat.css
@@ -84,4 +84,12 @@ h3 {
 }
 h4{
 	font-family: Lucida Handwriting;
+	color:white;
+  font-size:60px;
+  text-algin:right;
+  border:1px solid black;
+  padding-left:10px;
+  margin-left:30px;
+  width:1500px;
+  height:200px;
 }
