--- a/cat.css
+++ b/cat.css
@@ -83,6 +83,7 @@ h3 {
   padding-left:20px;
 }
 h4{
+	background-image: url(logo.jpg);
 	font-family: Lucida Handwriting;
 	color:white;
   font-size:60px;
