--- a/cat.css
+++ b/cat.css
@@ -85,7 +85,7 @@ h3 {
 h4{
 	background-image: url(klogo.jpg);
 	font-family: Lucida Handwriting;
-	color:white;
+	color:black;
   font-size:60px;
   text-algin:right;
   border:1px solid black;
