--- a/cat.css
+++ b/cat.css
@@ -94,7 +94,7 @@ p2 {
 	color:black;
 }
 .work {
-	border:2px solid black;
+	border:1px solid black;
 	display:block;
 	width:450px;
 	height:400px;
@@ -106,4 +106,13 @@ h4 {
 	font-family:helvetica;
 	font-weight:200;
 	color:black;
+}
+.contact {
+	border:1px solid black;
+	display:block;
+	width:450px;
+	height:400px;
+	float:right;
+	margin-top:40px;
+	margin-right:20px;
 }
