--- a/cat.css
+++ b/cat.css
@@ -85,7 +85,7 @@ div section img {
 }
 h3 {
 	font-family:helvetica;
-	font-weight:600;
+	font-size:25px;
 	color:black;
 }
 p2 {
@@ -100,11 +100,11 @@ p2 {
 	height:500px;
 	float:right;
 	margin-top:50px;
-	margin-right:30px;
+	margin-right:40px;
 }
 h4 {
 	font-family:helvetica;
-	font-weight:600;
+	font-size:25px;
 	color:black;
 }
 .contact {
@@ -114,11 +114,11 @@ h4 {
 	height:500px;
 	float:right;
 	margin-top:50px;
-	margin-right:30px;
+	margin-right:40px;
 }
 h5 {
 	font-family:helvetica;
-	font-weight:700;
+	font-size:25px;
 	color:black;
 }
 .resume {
@@ -128,5 +128,5 @@ h5 {
 	height:500px;
 	float:right;
 	margin-top:50px;
-	margin-right:30px;
+	margin-right:40px;
 }
