--- a/cat.css
+++ b/cat.css
@@ -96,6 +96,13 @@ p2 {
 	margin-top:50px;
 	margin-right:40px;
 }
+#pics img {
+	display:block;
+	width:400px;
+	float:right;
+	margin-top:40px;
+	margin-right:20px;
+}
 div section img {
   display:block;
   width:400px;
