--- a/cat.css
+++ b/cat.css
@@ -93,12 +93,14 @@ p2 {
 	width:400px;
 	height:600px;
 	float:right;
-	margin-top:30px;
+	margin-top:40px;
 	margin-right:40px;
 }
 #pics img {
+	font-size:20px;
+	text-align:center;
 	display:block;
-	width:400px;
+	width:250px;
 	float:right;
 	margin-top:40px;
 	margin-right:20px;
