--- a/cat.css
+++ b/cat.css
@@ -104,7 +104,7 @@ p2 {
 }
 div section img {
   display:block;
-  width:100px;
+  width:400px;
   float:right;
   margin-top:40px;
   margin-right:20px;
@@ -113,6 +113,13 @@ h4 {
 	font-family:helvetica;
 	font-size:25px;
 	color:black;
+}
+#contactme img {
+	display:block;
+	width:275px;
+	float:right;
+	margin-top:20px;
+	margin-right:60px;
 }
 .contact {
 	border:1px solid black;
