--- a/cat.css
+++ b/cat.css
@@ -106,8 +106,8 @@ div section img {
   display:block;
   width:400px;
   float:right;
-  margin-top:40px;
-  margin-right:20px;
+  margin-top:50px;
+  margin-right:30px;
 }
 h4 {
 	font-family:helvetica;
@@ -115,8 +115,8 @@ h4 {
 	color:black;
 }
 #contactme img {
-	display:block;
-	width:275px;
+	display:inline;
+	width:200px;
 	float:right;
 	margin-top:20px;
 	margin-right:60px;
