--- a/cat.css
+++ b/cat.css
@@ -26,9 +26,9 @@ li {
 	margin-right:70px;
  }
 h2 {
-	font-family:helvetica;
-	font-weight:600;
-	color:black;
+	display:block;
+	width:300px;
+	float:left;
 }
 a {
 	text-decoration:none;
@@ -99,14 +99,14 @@ p2 {
 	display:block;
 	width:275px;
 	float:right;
-	margin-top:40px;
+	margin-top:50px;
 	margin-right:60px;
 }
 div section img {
   display:block;
   width:400px;
   float:right;
-  margin-top:30px;
+  margin-top:40px;
   margin-right:50px;
 }
 h4 {
