--- a/cat.css
+++ b/cat.css
@@ -27,9 +27,9 @@ li {
  }
 h2 {
 	display:block;
-	width:200px;
+	width:100px;
 	float:left;
-	margin-left:30px;
+	margin-right:30px;
 }
 a {
 	text-decoration:none;
