--- a/cat.css
+++ b/cat.css
@@ -129,6 +129,11 @@ h5 {
 	font-size:25px;
 	color:black;
 }
+p3 {
+	font-family:helvetica;
+	font-weight:200;
+	color:black;
+}
 .resume {
 	display:block;
 	width:450px;
