--- a/cat.css
+++ b/cat.css
@@ -29,11 +29,11 @@ a {
 	text-decoration:none;
 	font-family:helvetica;
 	font-weight:200;
-	color:#000033;
+	color:#7fffd4;
 	font-size:25px;
 }
 a:hover {
-	color:#f6f080;
+	color:#fe506e;
 }
 .top {
 	padding:10px;
