--- a/cat.css
+++ b/cat.css
@@ -29,7 +29,7 @@ a {
 	text-decoration:none;
 	font-family:helvetica;
 	font-weight:200;
-	color:#7fffd4;
+	color:#4a4a4a;
 	font-size:25px;
 }
 a:hover {
@@ -41,7 +41,7 @@ a:hover {
 	padding-bottom:20px;
 	width:980px;
 	height:20px;
-	background-color:#c1ffc1;
+	background-color:#ffff66;
 	text-align:center;
 	z-index:1;
 }
