--- a/cat.css
+++ b/cat.css
@@ -40,7 +40,7 @@ a:hover {
 	padding-top:20px;
 	padding-bottom:20px;
 	width:980px;
-	height:20px;
+	height:30px;
 	background-color:#ffff66;
 	text-align:center;
 	z-index:1;
@@ -48,7 +48,7 @@ a:hover {
 .bottom {
 	padding:10px;
 	width:980px;
-	height:20px;
+	height:30px;
 	background-color:#c1ffc1;
 	clear:both;
 }
@@ -101,7 +101,7 @@ div section img {
   display:block;
   width:400px;
   float:right;
-  margin-top:40px;
+  margin-top:50px;
   margin-right:50px;
 }
 h4 {
@@ -112,7 +112,7 @@ h4 {
 #contactme img {
 	display:inline;
 	width:130px;
-	float:right;
+	float:left;
 	margin-top:60px;
 	margin-right:60px;
 }
