--- a/cat.css
+++ b/cat.css
@@ -40,7 +40,7 @@ a:hover {
 	padding-top:20px;
 	padding-bottom:20px;
 	width:980px;
-	height:30px;
+	height:20px;
 	background-color:#ffff66;
 	text-align:center;
 	z-index:1;
@@ -48,7 +48,7 @@ a:hover {
 .bottom {
 	padding:10px;
 	width:980px;
-	height:30px;
+	height:20px;
 	background-color:#c1ffc1;
 	clear:both;
 }
@@ -120,7 +120,7 @@ h4 {
 	display:block;
 	width:450px;
 	height:500px;
-	float:right;
+	float:left;
 	margin-top:60px;
 	margin-right:60px;
 }
