--- a/cat.css
+++ b/cat.css
@@ -110,10 +110,10 @@ h4 {
 	color:black;
 }
 #contactme img {
-	display:inline;
+	display:block;
 	width:130px;
 	margin-top:60px;
-	margin-right:60px;
+	margin-right:40px;
 }
 .contact {
 	display:block;
