--- a/cat.css
+++ b/cat.css
@@ -110,17 +110,17 @@ h4 {
 	color:black;
 }
 #contactme img {
-	display:block;
+	display:inline;
 	width:130px;
 	margin-top:60px;
-	margin-right:40px;
+	margin-right:60px;
 }
 .contact {
 	display:block;
 	width:450px;
 	height:500px;
 	margin-top:60px;
-	margin-right:40px;
+	margin-right:60px;
 }
 h5 {
 	font-family:helvetica;
