--- a/cat.css
+++ b/cat.css
@@ -113,14 +113,14 @@ h4 {
 	display:inline;
 	width:130px;
 	margin-top:60px;
-	margin-right:60px;
+	margin-left:60px;
 }
 .contact {
 	display:block;
 	width:450px;
 	height:500px;
 	margin-top:60px;
-	margin-right:60px;
+	margin-left:60px;
 }
 h5 {
 	font-family:helvetica;
