--- a/cat.css
+++ b/cat.css
@@ -6,8 +6,9 @@ nav {
   position:absolute;
 }
 h1 {
-	font-family:Helvetica;
+	font-family:Lucida Handwriting;
 	font-weight:300;
+	font-size:30px;
 	color: black;
 	margin-top:10px;
 }
